v1.47 - pequenos ajustes